--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Snake</title>
 </head>
 <body>
+    <head><h1>Bem-Vindo ao clássico Snake Game.</h1></head>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
