definir fim do jogo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
     <style type="css.text" src="style.css"></style>
-    <title>Snake</title>
+    <title>Snake Game.</title>
 </head>
 <body>
     <head><h1>Bem-Vindo ao clássico Snake Game.</h1></head>
