--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
-    <style type="css.text" src="style.css"></style>
+    <link rel="stylesheet" href="style.css"></style>
     <title>Snake Game.</title>
 </head>
 <body>
-    <head><h1>Bem-Vindo ao clássico Snake Game.</h1></head>
+    <head><h1><strong>CLÁSSICO SNAKE GAME.</strong></h1></head>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
